--- a/pages/blog.html
+++ b/pages/blog.html
@@ -5,18 +5,22 @@
     <link rel="icon" href="images/page-icon.ico" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="styles/main.css" />
+    <link rel="stylesheet" href="/styles/main.css" />
   </head>
   <body>
     <div class="container">
       <div class="header">
-        <a href="index.html" class="home button">Home</a>
-        <a href="pages/blog.html" class="blog button">Blog</a>
-        <img src="images/header-image.png" alt="Sasha's Website" class="logo" />
-        <a href="pages/contact.html" class="contact button">contact</a>
+        <a href="/index.html" class="home button">Home</a>
+        <a href="blog.html" class="blog button">Blog</a>
+        <img
+          src="/images/header-image.png"
+          alt="Sasha's Website"
+          class="logo"
+        />
+        <a href="contact.html" class="contact button">contact</a>
       </div>
       <div class="page-content">
-        <h1>asda</h1>
+        <h1>blog stuff</h1>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris
           pulvinar consectetur magna, vitae tempor dolor varius sed. Etiam magna
