Got stuck and made mobile support first. Fixed issue with header buttons. Added introduction to home page.

--- a/index.html
+++ b/index.html
@@ -10,69 +10,37 @@
   <body>
     <div class="container">
       <div class="header">
+        <img src="images/header-image.png" alt="Sasha's Website" class="logo" />
         <a href="index.html" class="home button">Home</a>
         <a href="pages/blog.html" class="blog button">Blog</a>
-        <img src="images/header-image.png" alt="Sasha's Website" class="logo" />
         <a href="pages/contact.html" class="contact button">contact</a>
       </div>
       <div class="page-content">
-        <h1>asda</h1>
+        <h1>Welcome To My Website</h1>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris
-          pulvinar consectetur magna, vitae tempor dolor varius sed. Etiam magna
-          risus, dignissim vitae sollicitudin nec, euismod nec nibh. Duis
-          aliquet dui in massa hendrerit, vehicula dictum neque venenatis. Cras
-          non eleifend elit, ac vestibulum risus. Cras iaculis sed neque
-          facilisis volutpat. Sed nec nisi a dolor posuere vestibulum vel ut
-          dui. Praesent eget iaculis sapien. Phasellus vitae tempus tellus, nec
-          fermentum odio. Sed non sollicitudin diam, ut auctor augue. Aliquam
-          vitae interdum enim, congue sagittis nunc. Ut gravida enim quis eros
-          pretium, sit amet gravida metus bibendum. Curabitur ut tristique enim,
-          ac suscipit neque. Integer vel elit vitae dolor sagittis volutpat
-          molestie et massa. Quisque facilisis enim vitae feugiat condimentum.
-          Integer sit amet neque mauris. Integer elit ante, dignissim vel elit
-          posuere, accumsan commodo dui. Duis nec sem at ex imperdiet dictum.
-          Sed aliquet felis at velit auctor hendrerit. Pellentesque habitant
-          morbi tristique senectus et netus et malesuada fames ac turpis
-          egestas. Nullam ac turpis eget purus porta mattis. Suspendisse
-          molestie non eros ac laoreet. Suspendisse eu erat at ante eleifend
-          dapibus. Proin et leo tempor, auctor ante vel, fringilla leo.
-          Phasellus tellus ante, ultricies id odio quis, feugiat commodo turpis.
-          Nullam efficitur dolor a augue congue, in luctus nunc porta. Fusce
-          scelerisque fermentum neque. Etiam consectetur in ligula vitae mattis.
-          Nunc pulvinar a eros vel pellentesque. Interdum et malesuada fames ac
-          ante ipsum primis in faucibus. Aenean posuere mi quis lorem laoreet,
-          sit amet commodo dui luctus. Nulla luctus nisl non diam efficitur, vel
-          vehicula augue maximus. Lorem ipsum dolor sit amet, consectetur
-          adipiscing elit. Quisque pretium ante sit amet velit pulvinar, ut
-          cursus turpis iaculis. Curabitur a est placerat, mattis magna sit
-          amet, tincidunt enim. Nam interdum accumsan felis, pulvinar molestie
-          libero maximus vel. Vestibulum eleifend massa nibh, in mattis sapien
-          interdum eu. Phasellus consectetur ante ex, quis blandit neque
-          ultrices gravida. Sed feugiat enim ut massa pretium consectetur. Sed
-          sit amet lectus quis turpis bibendum pulvinar. Sed mi dolor, mattis
-          sit amet mollis et, molestie sit amet tortor. Proin ornare tellus
-          nisi, et rutrum neque ultrices a. Vestibulum ut eros at odio dapibus
-          vestibulum. Sed porttitor augue vel ipsum pulvinar aliquam. Nam
-          condimentum, lacus at iaculis interdum, ipsum lorem malesuada nisi,
-          non fermentum elit lacus vitae lectus. Duis eros arcu, convallis vitae
-          facilisis ut, scelerisque sed diam. Sed luctus purus mauris, sed
-          vehicula metus posuere nec. Duis feugiat auctor pellentesque. Fusce
-          vitae dapibus dolor. Vestibulum sed viverra turpis. Pellentesque
-          elementum, lorem vitae laoreet fringilla, risus neque egestas sapien,
-          a condimentum risus arcu sed augue. Morbi quis convallis sem, sed
-          lacinia quam. Fusce blandit lectus quis tellus aliquam, ut volutpat
-          dui euismod. Integer quis lacinia erat. Integer fringilla ipsum
-          vestibulum vulputate tincidunt. Vivamus non ipsum tortor. Nam
-          sollicitudin felis quis risus molestie mollis. Phasellus tincidunt, mi
-          in tempus hendrerit, neque dolor interdum nisi, mollis interdum magna
-          velit id arcu. Suspendisse arcu augue, dapibus vel erat quis, euismod
-          vestibulum ligula. Mauris laoreet finibus tellus, vitae vestibulum
-          eros imperdiet vel.
+          Hi there, My Name is Sasha and I'm studying at Dev Academy to become a
+          Fullstack developer.
+        </p>
+        <br />
+        <p>
+          I decided to attend Dev Academy as I've always sort of known I wanted
+          to work in the Software developer industry since I was 14 due to my
+          interest in tech and coding. I had previously tried to become a
+          Fullstack developer in 2024 by attending another course ran by
+          Developers Institute but annoyingly after a month of studying there
+          the institute had to liquidate leaving me with no options but to work
+          off debt and wait. &#128517;
+        </p>
+        <br />
+        <br />
+        <h2>What is this blog about</h2>
+        <p>
+          This blog is to keep track of the projects I've made or working on and
+          to help me become a better webdesigner
         </p>
       </div>
       <footer>
-        <p>ea</p>
+        <p>2025 Limited Idk</p>
       </footer>
     </div>
   </body>
