--- a/pages/blog.html
+++ b/pages/blog.html
@@ -10,13 +10,13 @@
   <body>
     <div class="container">
       <div class="header">
-        <a href="/index.html" class="home button">Home</a>
-        <a href="blog.html" class="blog button">Blog</a>
         <img
           src="/images/header-image.png"
           alt="Sasha's Website"
           class="logo"
         />
+        <a href="/index.html" class="home button">Home</a>
+        <a href="blog.html" class="blog button">Blog</a>
         <a href="contact.html" class="contact button">contact</a>
       </div>
       <div class="page-content">
@@ -76,7 +76,7 @@
         </p>
       </div>
       <footer>
-        <p>ea</p>
+        <p>2025 Limited Idk</p>
       </footer>
     </div>
   </body>
