Added for responsiveness for Desktop, Tablet, Mobile

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Sasha's Blog</title>
-    <link rel="icon" href="images/page-icon.ico" />
+    <link rel="icon" href="/images/page-icon.ico" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/styles/main.css" />
