Renamed some pages/code to match the Student Handbook

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <div class="header">
         <img src="images/header-image.png" alt="Sasha's Website" class="logo" />
         <a href="index.html" class="home button">Home</a>
-        <a href="pages/blog.html" class="blog button">Blog</a>
-        <a href="pages/contact.html" class="contact button">contact</a>
+        <a href="pages/tech-blog.html" class="tech-blog button">Tech Blog</a>
+        <a href="pages/hs-blog.html" class="hs-blog button">Human Skills</a>
       </div>
       <div class="page-content">
         <h1>Welcome To My Website</h1>
