--- a/pages/tech-blog.html
+++ b/pages/tech-blog.html
@@ -16,11 +16,11 @@
           class="logo"
         />
         <a href="/index.html" class="home button">Home</a>
-        <a href="blog.html" class="blog button">Blog</a>
-        <a href="contact.html" class="contact button">contact</a>
+        <a href="tech-blog.html" class="tech-blog button">Tech Blog</a>
+        <a href="hs-blog.html" class="hs-blog button">Human Skills</a>
       </div>
       <div class="page-content">
-        <h1>blog stuff</h1>
+        <h1>Technical Blog</h1>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris
           pulvinar consectetur magna, vitae tempor dolor varius sed. Etiam magna
