Tidied up titles and changed spacing for article <p>

--- a/pages/hs-blog.html
+++ b/pages/hs-blog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Sasha's Blog</title>
+    <title>Human Skills - SDC</title>
     <link rel="icon" href="/images/page-icon.ico" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
