Added a drawing resembling me

--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
           This blog is to keep track of the projects I've made or working on and
           to help me become a better webdesigner
         </p>
-        <br />
+        <img
+          src="images/mefrfr.png"
+          alt="An animated pic of me"
+          id="funnypic"
+        />
       </div>
       <footer>
         <p>2025 Limited Idk</p>
