Changed id to class

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <img
           src="images/mefrfr.png"
           alt="An animated pic of me"
-          id="funnypic"
+          class="funnypic"
         />
       </div>
       <footer>
