Made an example article in tech-blog.html, Made a list on homepage to cover the competencies, Fixed a text wrap issue for my navigation buttons.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="page-content">
         <h1>Welcome To My Website</h1>
         <p>
-          Hi there, My Name is Sasha and I'm studying at Dev Academy to become a
+          Hi there, My name is Sasha and I'm studying at Dev Academy to become a
           Fullstack developer.
         </p>
         <br />
@@ -32,6 +32,23 @@
           off debt and wait. &#128517;
         </p>
         <br />
+        <h2>Here's 3 things to get to know me:</h2>
+        <ol class="center">
+          <li>
+            I'm a massive gamer and play many different genres and not limited
+            either PC or Consoles. &#127918;
+          </li>
+          <li>
+            I'm somewhat of a procrastinator but I make up for it as I'm a quick
+            learner and can focus in for hours on end to meet deadlines.
+            &#128523;
+          </li>
+          <li>
+            Finally lucky number 3, I'm a bit shy and awkward at first but that
+            will end very quickly if someone talks to me about the stuff I'm
+            passionate about. &#128578;
+          </li>
+        </ol>
         <br />
         <h2>What is this blog about</h2>
         <p>
