--- a/pages/tech-blog.html
+++ b/pages/tech-blog.html
@@ -26,22 +26,23 @@
           <div class="article-format">
             <h3 class="article-header">Te Houtaewa</h3>
             <p class="article-text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris
-              pulvinar consectetur magna, vitae tempor dolor varius sed. Etiam
-              magna risus, dignissim vitae sollicitudin nec, euismod nec nibh.
-              Duis aliquet dui in massa hendrerit, vehicula dictum neque
-              venenatis. Cras non eleifend elit, ac vestibulum risus. Cras
-              iaculis sed neque facilisis volutpat. Sed nec nisi a dolor posuere
-              vestibulum vel ut dui. Praesent eget iaculis sapien. Phasellus
-              vitae tempus tellus, nec fermentum odio. Sed non sollicitudin
-              diam, ut auctor augue. Aliquam vitae interdum enim, congue
-              sagittis nunc.
+              This article is a short story about a boy named Te Houtaewa who
+              rebels against instructions and decides to steal.
             </p>
             <a
               href="/blog/te-houtaewa-template.html"
               class="article-button button"
               >Find out more.</a
             >
+          </div>
+        </article>
+        <article>
+          <div class="article-format">
+            <h3 class="article-header">Nothing right now</h3>
+            <p class="article-text">
+              This is a space filler for whats to come. &#128513;
+            </p>
+            <a href="#" class="article-button button">Example.</a>
           </div>
         </article>
       </div>
