Completed sprint 2 'Technical Blog - CSS Concepts', Linked all .html pages, Changed Class image to Id.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <img
           src="images/mefrfr.png"
           alt="An animated pic of me"
-          class="funnypic"
+          id="funnypic"
         />
       </div>
       <footer>
