--- a/pages/tech-blog.html
+++ b/pages/tech-blog.html
@@ -29,6 +29,12 @@
               This article is a short story about a boy named Te Houtaewa who
               rebels against instructions and decides to steal.
             </p>
+            <img
+              src="/images/te-houtaewa.png"
+              alt="Te houtaewa Icon"
+              id="TH-image"
+              class="article-text"
+            />
             <a
               href="/blog/te-houtaewa-template.html"
               class="article-button button"
@@ -38,11 +44,20 @@
         </article>
         <article>
           <div class="article-format">
-            <h3 class="article-header">Nothing right now</h3>
+            <h3 class="article-header">CSS Concepts</h3>
             <p class="article-text">
-              This is a space filler for whats to come. &#128513;
+              This article covers the difference between 3 properties(Borders,
+              Padding, and Margin) and how to use them.
             </p>
-            <a href="#" class="article-button button">Example.</a>
+            <img
+              src="/images/css-box-model.png"
+              alt="CSS Box Model Icon"
+              id="CBM-image"
+              class="article-text"
+            />
+            <a href="/blog/css-concept.html" class="article-button button"
+              >Find out more.</a
+            >
           </div>
         </article>
       </div>
