--- a/pages/hs-blog.html
+++ b/pages/hs-blog.html
@@ -21,59 +21,32 @@
       </div>
       <div class="page-content">
         <h1>Human Skills Blog</h1>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris
-          pulvinar consectetur magna, vitae tempor dolor varius sed. Etiam magna
-          risus, dignissim vitae sollicitudin nec, euismod nec nibh. Duis
-          aliquet dui in massa hendrerit, vehicula dictum neque venenatis. Cras
-          non eleifend elit, ac vestibulum risus. Cras iaculis sed neque
-          facilisis volutpat. Sed nec nisi a dolor posuere vestibulum vel ut
-          dui. Praesent eget iaculis sapien. Phasellus vitae tempus tellus, nec
-          fermentum odio. Sed non sollicitudin diam, ut auctor augue. Aliquam
-          vitae interdum enim, congue sagittis nunc. Ut gravida enim quis eros
-          pretium, sit amet gravida metus bibendum. Curabitur ut tristique enim,
-          ac suscipit neque. Integer vel elit vitae dolor sagittis volutpat
-          molestie et massa. Quisque facilisis enim vitae feugiat condimentum.
-          Integer sit amet neque mauris. Integer elit ante, dignissim vel elit
-          posuere, accumsan commodo dui. Duis nec sem at ex imperdiet dictum.
-          Sed aliquet felis at velit auctor hendrerit. Pellentesque habitant
-          morbi tristique senectus et netus et malesuada fames ac turpis
-          egestas. Nullam ac turpis eget purus porta mattis. Suspendisse
-          molestie non eros ac laoreet. Suspendisse eu erat at ante eleifend
-          dapibus. Proin et leo tempor, auctor ante vel, fringilla leo.
-          Phasellus tellus ante, ultricies id odio quis, feugiat commodo turpis.
-          Nullam efficitur dolor a augue congue, in luctus nunc porta. Fusce
-          scelerisque fermentum neque. Etiam consectetur in ligula vitae mattis.
-          Nunc pulvinar a eros vel pellentesque. Interdum et malesuada fames ac
-          ante ipsum primis in faucibus. Aenean posuere mi quis lorem laoreet,
-          sit amet commodo dui luctus. Nulla luctus nisl non diam efficitur, vel
-          vehicula augue maximus. Lorem ipsum dolor sit amet, consectetur
-          adipiscing elit. Quisque pretium ante sit amet velit pulvinar, ut
-          cursus turpis iaculis. Curabitur a est placerat, mattis magna sit
-          amet, tincidunt enim. Nam interdum accumsan felis, pulvinar molestie
-          libero maximus vel. Vestibulum eleifend massa nibh, in mattis sapien
-          interdum eu. Phasellus consectetur ante ex, quis blandit neque
-          ultrices gravida. Sed feugiat enim ut massa pretium consectetur. Sed
-          sit amet lectus quis turpis bibendum pulvinar. Sed mi dolor, mattis
-          sit amet mollis et, molestie sit amet tortor. Proin ornare tellus
-          nisi, et rutrum neque ultrices a. Vestibulum ut eros at odio dapibus
-          vestibulum. Sed porttitor augue vel ipsum pulvinar aliquam. Nam
-          condimentum, lacus at iaculis interdum, ipsum lorem malesuada nisi,
-          non fermentum elit lacus vitae lectus. Duis eros arcu, convallis vitae
-          facilisis ut, scelerisque sed diam. Sed luctus purus mauris, sed
-          vehicula metus posuere nec. Duis feugiat auctor pellentesque. Fusce
-          vitae dapibus dolor. Vestibulum sed viverra turpis. Pellentesque
-          elementum, lorem vitae laoreet fringilla, risus neque egestas sapien,
-          a condimentum risus arcu sed augue. Morbi quis convallis sem, sed
-          lacinia quam. Fusce blandit lectus quis tellus aliquam, ut volutpat
-          dui euismod. Integer quis lacinia erat. Integer fringilla ipsum
-          vestibulum vulputate tincidunt. Vivamus non ipsum tortor. Nam
-          sollicitudin felis quis risus molestie mollis. Phasellus tincidunt, mi
-          in tempus hendrerit, neque dolor interdum nisi, mollis interdum magna
-          velit id arcu. Suspendisse arcu augue, dapibus vel erat quis, euismod
-          vestibulum ligula. Mauris laoreet finibus tellus, vitae vestibulum
-          eros imperdiet vel.
-        </p>
+        <h2>Below you'll find some human skills posts</h2>
+        <article>
+          <div class="article-format">
+            <h3 class="article-header">Identity Values</h3>
+            <p class="article-text">
+              This post is me answering the deep and semi personal questions I
+              was given by the Dev Academy student handbook.
+            </p>
+            <img src="" alt="" id="" class="article-text" />
+            <a href="/blog/identity-values.html" class="article-button button"
+              >Click here.</a
+            >
+          </div>
+        </article>
+        <article>
+          <div class="article-format">
+            <h3 class="article-header">Learning Plan</h3>
+            <p class="article-text">
+              This post is what my learning plan/commitment to this course is.
+            </p>
+            <img src="" alt="" id="" class="article-text" />
+            <a href="/blog/learning-plan.html" class="article-button button"
+              >Click here.</a
+            >
+          </div>
+        </article>
       </div>
       <footer>
         <p>2025 Limited Idk</p>
