Completed 'Sprint 3:Cultural Blog Emotional Intelligence', Added 1 new .html and 1 href link

--- a/pages/hs-blog.html
+++ b/pages/hs-blog.html
@@ -47,6 +47,20 @@
             >
           </div>
         </article>
+        <article>
+          <div class="article-format">
+            <h3 class="article-header">Emotional Intelligence</h3>
+            <p class="article-text">
+              This post is what I found out about emotional Intelligence.
+            </p>
+            <img src="" alt="" id="" class="article-text" />
+            <a
+              href="/blog/emotional-intelligence.html"
+              class="article-button button"
+              >Click here.</a
+            >
+          </div>
+        </article>
       </div>
       <footer>
         <p>2025 Limited Idk</p>
