Completed Sprint 3:'Technical Blog - JS Fundamental'

--- a/pages/tech-blog.html
+++ b/pages/tech-blog.html
@@ -60,6 +60,24 @@
             >
           </div>
         </article>
+        <article>
+          <div class="article-format">
+            <h3 class="article-header">Javascript DOM</h3>
+            <p class="article-text">
+              This article covers the information I've researched about
+              Javascript DOM.
+            </p>
+            <img
+              src="/images/DOM-model.png"
+              alt="Javascript DOM Model Icon"
+              id="JSD-image"
+              class="article-text"
+            />
+            <a href="/blog/javascript-dom.html" class="article-button button"
+              >Find out more.</a
+            >
+          </div>
+        </article>
       </div>
       <footer>
         <p>2025 Limited Idk</p>
