Added addition text

--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
         <h2>What is this blog about</h2>
         <p>
           This blog is to keep track of the projects I've made or working on and
-          to help me become a better webdesigner
+          to help me become a better webdesigner.
         </p>
+        <p>I'll probably fix and change aesthetics soon.</p>
         <img
           src="images/mefrfr.png"
           alt="An animated pic of me"
