Assignment: Cultural Blog - Mindset

--- a/pages/hs-blog.html
+++ b/pages/hs-blog.html
@@ -61,6 +61,18 @@
             >
           </div>
         </article>
+        <article>
+          <div class="article-format">
+            <h3 class="article-header">Mindset</h3>
+            <p class="article-text">
+              This post is about neuroplasticity and a growth mindset.
+            </p>
+            <img src="" alt="" id="" class="article-text" />
+            <a href="/blog/neuroplasticity.html" class="article-button button"
+              >Click here.</a
+            >
+          </div>
+        </article>
       </div>
       <footer>
         <p>2025 Limited Idk</p>
