Worked on and completed the 'Wellbeing plan' assignment

--- a/pages/hs-blog.html
+++ b/pages/hs-blog.html
@@ -73,6 +73,19 @@
             >
           </div>
         </article>
+        <article>
+          <div class="article-format">
+            <h3 class="article-header">Te Whare Tapa Whā</h3>
+            <p class="article-text">
+              This post is about my wellbeing plan using Tā Mason Durie’s Te
+              Whare Tapa Whā model.
+            </p>
+            <img src="" alt="" id="" class="article-text" />
+            <a href="/blog/te-whare-tapa-wha.html" class="article-button button"
+              >Click here.</a
+            >
+          </div>
+        </article>
       </div>
       <footer>
         <p>2025 Limited Idk</p>
