Added navigation to problem-solving.html

--- a/pages/tech-blog.html
+++ b/pages/tech-blog.html
@@ -78,6 +78,24 @@
             >
           </div>
         </article>
+        <article>
+          <div class="article-format">
+            <h3 class="article-header">Problem Solving</h3>
+            <p class="article-text">
+              This article is all about the problem solving I had to face in
+              sprint 4.
+            </p>
+            <img
+              src="/images/bigbrain.jpg"
+              alt="The Big Brain Meme"
+              id="CBM-image"
+              class="article-text"
+            />
+            <a href="/blog/problem-solving.html" class="article-button button"
+              >Find out more.</a
+            >
+          </div>
+        </article>
       </div>
       <footer>
         <p>2025 Limited Idk</p>
