Completed Reflection.html Task

--- a/pages/hs-blog.html
+++ b/pages/hs-blog.html
@@ -86,6 +86,20 @@
             >
           </div>
         </article>
+        <article>
+          <div class="article-format">
+            <h3 class="article-header">Foundations Reflection</h3>
+            <p class="article-text">
+              This post is about my overall reflections on the foundations.
+            </p>
+            <img src="" alt="" id="" class="article-text" />
+            <a
+              href="/blog/foundations-reflection.html"
+              class="article-button button"
+              >Click here.</a
+            >
+          </div>
+        </article>
       </div>
       <footer>
         <p>2025 Limited Idk</p>
