--- a/pages/hs-blog.html
+++ b/pages/hs-blog.html
@@ -40,6 +40,7 @@
             <h3 class="article-header">Learning Plan</h3>
             <p class="article-text">
               This post is what my learning plan/commitment to this course is.
+              <br />*Updated (13/04/25)*
             </p>
             <img src="" alt="" id="" class="article-text" />
             <a href="/blog/learning-plan.html" class="article-button button"
