Added the Important update, and tidied up heavily informal paragraphs/sentences.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
         <a href="pages/hs-blog.html" class="hs-blog button">Human Skills</a>
       </div>
       <div class="page-content">
+        <div class="important">
+          <h1>Please Read Before Continuing!!!</h1>
+          <p>
+            This site is currently under going a redesign to better reflect the
+            current me as the last time it was updated was in April. The new
+            site will be available on the 20/12/2025 and feature more recent
+            projects and activities I've been up to. I hope this doesn't leave a
+            bad impression as I also have to balance other commitments like my
+            work and family, other than that I hope you enjoy the site!
+          </p>
+        </div>
         <h1>Welcome To My Website</h1>
         <p>
           Hi there, My name is Sasha and I'm studying at Dev Academy to become a
@@ -23,39 +34,34 @@
         </p>
         <br />
         <p>
-          I decided to attend Dev Academy as I've always sort of known I wanted
-          to work in the Software developer industry since I was 14 due to my
-          interest in tech and coding. I had previously tried to become a
-          Fullstack developer in 2024 by attending another course ran by
-          Developers Institute but annoyingly after a month of studying there
-          the institute had to liquidate leaving me with no options but to work
-          off debt and wait. &#128517;
+          I decided to attend Dev Academy as I've always I wanted to work in the
+          Software developer industry since I was 14 due to my interest in tech
+          and coding. I had previously tried to become a Fullstack developer in
+          2024 by attending another course ran by Developers Institute but after
+          a month of studying there the institute had to liquidate leaving me
+          with no options but to work off my debt and wait. &#128517;
         </p>
         <br />
         <h2>Here's 3 things to get to know me:</h2>
         <ol class="center">
+          <li>I'm a massive gamer and into all sorts of things. &#127918;</li>
           <li>
-            I'm a massive gamer and play many different genres and not limited
-            either PC or Consoles. &#127918;
-          </li>
-          <li>
-            I'm somewhat of a procrastinator but I make up for it as I'm a quick
-            learner and can focus in for hours on end to meet deadlines.
+            I'm a quick learner and can focus in for hours to meet deadlines.
             &#128523;
           </li>
           <li>
-            Finally lucky number 3, I'm a bit shy and awkward at first but that
-            will end very quickly if someone talks to me about the stuff I'm
-            passionate about. &#128578;
+            I'm a little shy and awkward at first but that will end very quickly
+            if the conversation heads towards something I'm passionate about.
+            &#128578;
           </li>
         </ol>
         <br />
-        <h2>What is this blog about</h2>
+        <h2>What is this website about</h2>
         <p>
-          This blog is to keep track of the projects I've made or working on and
-          to help me become a better webdesigner.
+          This website is to display my progress on the work I've done through
+          the foundations portion of Dev Academy, and to help me reflect on my
+          time during it.
         </p>
-        <p>I'll probably fix and change aesthetics soon.</p>
         <img
           src="images/mefrfr.png"
           alt="An animated pic of me"
@@ -63,7 +69,7 @@
         />
       </div>
       <footer>
-        <p>2025 Limited Idk</p>
+        <p>2025 Limited</p>
       </footer>
     </div>
   </body>
