--- a/pages/hs-blog.html
+++ b/pages/hs-blog.html
@@ -103,7 +103,7 @@
         </article>
       </div>
       <footer>
-        <p>2025 Limited Idk</p>
+        <p>2025 Limited</p>
       </footer>
     </div>
   </body>
